# ruview-mvp

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  package.json  pnpm-lock.yaml  start_all.sh  turbo.json  watchdog.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
agents/: camera-cv-agent.md  claude-codex-collab-agent.md  claude-implementation-agent.md  devops-agent.md  frontend-agent.md  hardware-agent.md  observatory-agent.md  qa-agent.md  signal-agent.md
apps/api-gateway/: requirements.txt
apps/web-monitor/: .env.development  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
docker/: Dockerfile.api-gateway  Dockerfile.camera  Dockerfile.signal-adapter  Dockerfile.web  docker-compose.yml
docs/: CODE_REVIEW_2026-03-23.md  FEATURE_REPORT_NOTION.md  PHASE_WORKFLOW.md  Q1_execution_prompt.md  Q2_react_ui_design.md  Q3_wbs_schedule.md  STRATEGY_2026.md  claude-codex-workflow.md  claude-task-prompt.md
docs/adr/: ADR-001-csi-signal-processing.md  ADR-002-multi-node-architecture.md  ADR-003-camera-csi-fusion.md  ADR-004-cloudflare-relay.md  ADR-005-observatory-visualization.md  (+1 more)
esp32/: monitor.py  morning_monitor.py  provision_multi.py  reboot_nodes.py  setup_device.py
examples/: README.md  basic_monitor.py  fall_recorder.py
infra/: docker-compose.infra.yml
monitoring/: swarm_health.py
rust-port/: Cargo.toml  README.md
rust-port/ruview-wasm/: Cargo.toml
rust-port/ruview-wasm/src/: lib.rs
scripts/: monitoring_report.py  weekend_learner.py
(+206 files in other folders)
